# clux

./: .gitignore  Cargo.toml  README.md  notes.md
.github/workflows/: auto-bump-version.yml  ci.yml  release.yml
benches/: grid.rs  scrollback.rs  terminal.rs
docs/: PHASE7_DETACHED_SESSIONS.md  RELEASING.md  REMOTE_SSH.md
src/: cell.rs  clipboard.rs  config.rs  event.rs  grid.rs  hyperlink.rs  lib.rs  main.rs  pane.rs  protocol.rs  pty.rs  render.rs  scrollback.rs  selection.rs  session.rs  terminal.rs  window.rs
src/client/: connection.rs  mod.rs  remote.rs  screen.rs
src/server/: client_conn.rs  listener.rs  mod.rs
tests/: integration.rs  pane_integration.rs
